overflow and products items size problem fixed

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 /* This is body */
 body{
     font-family: 'Lato', sans-serif;
-      font-size: 18;
+      font-size: 18pt;
 }
 
 /* This is primary colors and styles part */
@@ -76,8 +76,8 @@ main > .products-section > .flowers-container {
 }
 
 main > .products-section > .flowers-container .item-1{
-    width: 400px;
-    height: 500px;
+    width: 300px;
+    height: 400px;
     border-top-right-radius: 400px;
     border-top-left-radius: 400px;
     background-color: rgba(229, 82, 114, 0.15);
@@ -85,8 +85,8 @@ main > .products-section > .flowers-container .item-1{
     justify-content: center;
 }
 main > .products-section > .flowers-container .item-2{
-    width: 400px;
-    height: 500px;
+    width: 300px;
+    height: 400px;
     border-top-right-radius: 400px;
     border-top-left-radius: 400px;
     background-color: rgba(5, 152, 160, 0.15);
@@ -94,8 +94,8 @@ main > .products-section > .flowers-container .item-2{
     justify-content: center;
 }
 main > .products-section > .flowers-container .item-3{
-    width: 400px;
-    height: 500px;
+    width: 300px;
+    height: 400px;
     border-top-right-radius: 400px;
     border-top-left-radius: 400px;
     background-color: rgba(71, 125, 17, 0.15);
@@ -103,8 +103,8 @@ main > .products-section > .flowers-container .item-3{
     justify-content: center;
 }
 main > .products-section > .flowers-container img{
-    width: 310px;
-    height: 370px;
+    width: 200px;
+    height: 250px;
     align-self: flex-end;
 }
 
